--- a/documentation/docs/graphql/mutations.mdx
+++ b/documentation/docs/graphql/mutations.mdx
@@ -10,7 +10,7 @@ from name provided to `@ObjectType` or the class name.
 
 The following examples are based on the following `TodoItemDTO`
 
-```ts
+```ts title="todo-item.dto.ts"
 import { FilterableField } from '@nestjs-query/query-graphql';
 import { ObjectType, ID, GraphQLISODateTime } from '@nestjs/graphql';
 
